# agent-orchestrator-mcp

./: .gitignore  README.md  acp_report.md  acp_test_ideas.md  pyproject.toml  test_dashboard.py
orchestrator/: __init__.py  __main__.py  acp_client.py  message_bus.py  registry.py  server.py  task_manager.py  utils.py  web_server.py
web/: index.html
