[project]
name = "agent-orchestrator-mcp"
version = "0.1.0"
description = "MCP server for local multi-agent orchestration — no API keys required"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
